examples/test/testpolicy3815.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3815
  namespace: namespace34
spec:
  podSelector:
    matchLabels:
      key46: value46
      key9: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value45
          key3: value38
          key33: value13
      podSelector:
        matchLabels:
          key45: value29
          key48: value21
